--- a/IA/Frontend/CSS/test.css
+++ b/IA/Frontend/CSS/test.css
@@ -9,11 +9,6 @@ body {font-family: Verdana, sans-serif;}
   text-align: center;
 }
 
-/* Month list */
-.month ul {
-  margin: 0;
-  padding: 0;
-}
 
 .month ul li {
   color: white;
@@ -65,9 +60,37 @@ body {font-family: Verdana, sans-serif;}
   color: #777;
 }
 
-/* Highlight the "current" day */
-.days li .active {
-  padding: 5px;
-  background: #1abc9c;
-  color: white !important
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
+
+.day-container {
+  display: inline-block;
+  margin: 5px;
+}
+
+.day-card {
+  width: 50px;
+  height: 50px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
+  line-height: 50px;
+}
+
+.current-day {
+  background-color: 41, 196, 62;
 }
